[package]
name = "solar-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "jpeg",
    "x11",
] }
tracing = "0.1"
bevy_mod_picking = "0.11.0"
bevy_editor_pls = "0.2.0"
smooth-bevy-cameras = "0.7.0"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
# strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
