[package]
name = "solar-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9", default-features = false, features = [
    "bevy_asset",
    "bevy_winit",
    "bevy_render",
    "bevy_pbr",
    "jpeg",
    "x11",
] }
bevy_framepace = "0.11"
bevy_mod_picking = "0.11"
bevy_editor_pls = "0.2"
bevy_embedded_assets = "0.6"
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly", ref = "aae4ce390ec7c2f8e299441a70725ea3b3833fac" }
enum-iterator = "1.4"


[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
# strip = true

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
